# lenigma

./: .gitignore  CODES.md  LICENSE  README.md  SECURITY.md  lenigma.py  protocol.md  pyproject.toml
.github/workflows/: test.yml
lenigma/: __init__.py  __main__.py  codes.json
tests/: test_roundtrip.py
tests/audio/: README.md  nero.txt  one.txt  two.txt
tools/: gen_codes_md.py
